@@ -144,6 +144,14 @@ do_set_xml (void)
 	}
 }
 
+static void
+do_restore_from_defaults (void) 
+{
+	prefs = PREFERENCES (preferences_new ());
+	preferences_save (prefs);
+	preferences_apply_now (prefs);
+}
+
 int
 main (int argc, char **argv)
 {
@@ -169,6 +177,10 @@ main (int argc, char **argv)
 	}
 	else if (res == 4) {
 		do_set_xml ();
+		return 0;
+	}
+	else if (res == 5) {
+		do_restore_from_defaults ();
 		return 0;
 	}
 
